# surrealkit

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.env  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cargo.yml  fmt.yml  integration-test.yml  publish-vite-plugin.yml  release-binaries.yml  release-docker.yml
crates/surrealkit/: Cargo.toml  MIGRATING.md  README.md  build.rs
crates/surrealkit-macros/: Cargo.toml  README.md
crates/surrealkit-macros/src/: lib.rs
crates/surrealkit/src/: config.rs  constants.rs  core.rs  lib.rs  main.rs  migrate.rs  rollout.rs  scaffold.rs  schema.rs  schema_state.rs  seed.rs  setup.rs  sync.rs  variables.rs
crates/surrealkit/src/templates/: emit.rs  manifest.rs  mod.rs  select.rs  source.rs
crates/surrealkit/src/tester/: actors.rs  api.rs  assertions.rs  filters.rs  loader.rs  mod.rs  report.rs  runner.rs  types.rs
crates/surrealkit/src/typegen/: emit.rs  introspect.rs  mod.rs  signature.rs  type_parser.rs  types.rs
crates/surrealkit/templates/default/: template.toml
crates/surrealkit/templates/default/schema/: user.surql
crates/surrealkit/templates/default/schema/organization/: organization_invitation.surql  organization_permission.surql  organization_role.surql
crates/surrealkit/templates/default/seed/: organization_permissions.surql
crates/surrealkit/templates/default/tests/suites/: teams.toml  units.toml
crates/surrealkit/tests/: auth_levels.rs  embedded_sync.rs  library_api.rs  macro_embed.rs  typegen_api.rs
crates/surrealkit/tests/fixtures/embed_schema/: widget.surql
crates/surrealkit/tests/fixtures/embed_seed/: widgets.surql
crates/surrealkit/tests/fixtures/schema/: fields.surql  indexes.surql  tables.surql
crates/surrealkit/tests/fixtures/seed/: 001_seed_users.surql  002_seed_posts.surql
database/: setup.surql
database/tests/suites/: smoke.toml
examples/testing/: config.toml
examples/testing/fixtures/: root_and_access_setup.surql
examples/testing/suites/: root_access_full_stack.toml
templates/default/schema/organization/: employee_of.surql  functions.surql  organization.surql
templates/default/schema/subsidiaries/: functions.surql  has_subsidiary.surql  organization_delegation_grant.surql
templates/default/schema/team/: functions.surql  member_of.surql  team.surql
templates/default/schema/units/: functions.surql  organization_unit.surql
templates/default/seed/: team_permissions.surql
templates/default/tests/fixtures/: organization_seed.surql
templates/default/tests/suites/: organization.toml  subsidiaries.toml
