[package]
name = 'surrealkit-macros'
version = '0.5.0'
edition = '2024'
authors = ['Chiru Boggavarapu <chiru@foretag.co>', 'Tobie Morgan Hitchcock <tobie@surrealdb.com>']
repository = 'https://github.com/surrealdb/surrealkit'
license-file = 'LICENSE'
description = 'Proc-macros for SurrealKit: compile-time schema embedding and validation'

[lib]
proc-macro = true

[dependencies]
proc-macro2 = '1'
quote = '1'
syn = { version = '2', features = ['full'] }
sha2 = '0.10'
hex = '0.4'
walkdir = '2.5'

[lints]
workspace = true
