[package]
name = 'surrealkit-macros'
version = '0.6.0'
edition = '2024'
authors = ['Chiru Boggavarapu <chiru@foretag.co>', 'Tobie Morgan Hitchcock <tobie@surrealdb.com>']
repository = 'https://github.com/surrealdb/surrealkit'
license-file = 'LICENSE'
description = 'Proc-macros for SurrealKit - embed schema files at compile time'

[lib]
proc-macro = true

[dependencies]
proc-macro2 = '1'
quote = '1'
syn = { version = '2', features = ['full'] }
walkdir = '2.5'

[lints]
workspace = true
