[package]
name = 'surrealkit'
description = 'Manage migrations, seeding, typgen and tests for SurrealDB via CLI'
version = '0.7.0'
edition = '2024'
authors = ['Chiru Boggavarapu <chiru@foretag.co>', 'Tobie Morgan Hitchcock <tobie@surrealdb.com>']
repository = 'https://github.com/surrealdb/surrealkit'
license = 'Apache-2.0'
keywords = ['surrealdb', 'migrations', 'seed', 'testing', 'manage']

[dependencies]
surrealkit-macros = { path = '../surrealkit-macros', version = '0.7.0' }
anyhow = '1'
clap = { version = '4.5.47', features = ['derive'] }
hex = '0.4'
serde = { version = '1.0.225', features = ['derive'] }
serde_json = '1.0'
toml = '0.8'
rust_dotenv = '0.1.2'
sha2 = '0.10'
surrealdb = { version = '3.1.4', features = ['protocol-http', 'jwks'] }
surrealdb-types = { version = '3.1.4' }
time = { version = '0.3', features = ['macros', 'formatting'] }
tokio = { version = '1.47', features = ['macros', 'rt-multi-thread', 'signal', 'time'] }
walkdir = '2.5'
reqwest = { version = '0.12', default-features = false, features = ['json', 'rustls-tls'] }
regex = '1'
rustls = { version = '0.23', default-features = false, features = ['aws-lc-rs'] }
inquire = '0.7'
tempfile = '3'
indoc = "2"

[features]
# The published CLI binary bundles only the in-memory engine, keeping the
# prebuilt artifact light. Remote connections (protocol-http/jwks) are always
# available. Build the CLI with --features kv-surrealkv (or `embedded`) for an
# embedded build.
#
# Library consumers do NOT need these features to target an embedded engine:
# Cargo unifies features across the dependency graph, so enabling e.g.
# `surrealdb/kv-surrealkv` in your own crate is enough for SurrealKit's
# `Surreal<Any>` to open `surrealkv://`.
default = ['kv-mem']
kv-mem = ['surrealdb/kv-mem']
kv-surrealkv = ['surrealdb/kv-surrealkv']
kv-rocksdb = ['surrealdb/kv-rocksdb']
# Convenience: a full embedded CLI with every supported local engine.
embedded = ['kv-surrealkv', 'kv-rocksdb', 'kv-mem']

[dev-dependencies]
test-case = '3'
insta = { version = '1', features = ['json'] }

[lints]
workspace = true

# Enable installation of prebuilt release binaries via `cargo binstall surrealkit`.
# Archives published by .github/workflows/release-binaries.yml are named
#   surrealkit-vX.Y.Z-<target>.(tar.gz|zip)
# and contain the binary at the archive root (no `{name}-{target}/` subfolder),
# so we override `bin-dir` to skip binstall's default prefix.
[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
